<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FitnessCenterApp</string>
    <string name="app_title">Fitness Center Manager</string>
    <string name="btn_add">Add</string>
    <string name="btn_qr">Scan QR Code</string>
    <string name="btn_info">Info</string>
    <string name="btn_about">About</string>
    <string name="btn_exit">Exit</string>
    <string name="equipment_name">Name</string>
    <string name="weight_limit">Weight Limit</string>
    <string name="price">Price</string>
    <string name="submit">Submit</string>
    <string name="about">About</string>
    <string name="brand">Brand</string>
    <string name="muscle_group">Muscle Group</string>
    <string name="app_version">Version 5.0</string>
    <string name="author">Author: Mihail Trajkoski</string>
    <string name="welcome_message">Welcome, %1$s! You have %2$d equipment items in the list.</string>
    <string name="app_description_html"><![CDATA[
    Welcome to <b>Fitness Center App</b>!<br/><br/>
    This application helps you <i>manage gym equipment</i> efficiently.<br/><br/>
    Features:<br/>
    • Add equipment<br/>
    • Add equipment by scanning QR code<br/>
    • Multi-language support
]]></string>
    <string name="settings">Settings</string>
    <string name="uuid_loading">UUID: Loading...</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="enter_maximum_equipment">Enter maximum equipment</string>
    <string name="max_equipment_count">Max Equipment Count:</string>
    <string name="enter_gym_name">Enter gym name</string>
    <string name="gym_name">Gym Name:</string>

    <string name="equipment_list_title">Equipment List</string>
    <string name="delete_equipment">Delete Equipment</string>
    <string name="delete_confirmation">Are you sure you want to delete this equipment?</string>
    <string name="delete">Delete</string>
</resources>